- Autoload in composer.json

--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,15 @@
             "email": "amadeus.cmd@gmail.com"
         }
     ],
-    "require": {}
+    "require": {},
+    "autoload": {
+        "psr-4": {
+            "CarrotJob\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
+    }
 }
