--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,16 @@
             "email": "amadeus.cmd@gmail.com"
         }
     ],
-    "require": {},
+    "require": {
+        "php": ">=7.1",
+        "illuminate/config": "^5.6",
+        "vlucas/phpdotenv": "^2.4",
+        "symfony/finder": "^4.0"
+    },
     "autoload": {
         "psr-4": {
-            "CarrotJob\\": "src/"
+            "CarrotCore\\": "Core/",
+            "CarrotDaemon\\": "Daemon/"
         }
     },
     "autoload-dev": {
