--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "php": ">=7.1",
         "illuminate/config": "^5.6",
         "vlucas/phpdotenv": "^2.4",
-        "symfony/finder": "^4.0"
+        "symfony/finder": "^4.0",
+        "react/socket": "^0.8.11"
     },
     "autoload": {
         "psr-4": {
@@ -25,5 +26,8 @@
         "psr-4": {
             "Tests\\": "tests/"
         }
+    },
+    "require-dev": {
+        "symfony/var-dumper": "^4.0"
     }
 }
